<resources>
    <string name="app_name">NotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title...</string>
    <string name="subtitle">Subtitle...</string>
    <string name="notes">Notes...</string>
    <string name="dialog">Are you sure want to delete\n This Notes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
</resources>