<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="#a8a8a8"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/dialog"
         android:textStyle="bold"
         android:gravity="center"
         android:textSize="18dp"
         />
    <TextView
        android:id="@+id/dialog_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:background="@drawable/yes_back"
        />
    <TextView
        android:id="@+id/dialog_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/no_back"
        />
</LinearLayout>