<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".ui.Fragments.CreateNotesFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >
   <EditText
       android:id="@+id/etTitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/title"
       android:layout_marginTop="10dp"
       android:padding="15dp"
       android:textColorHint="@color/white"
       android:background="@drawable/et_back_style"
       />
        <EditText
            android:id="@+id/etSbTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textColorHint="@color/white"
            android:background="@drawable/et_back_style"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
        <ImageView
            android:id="@+id/pGreen"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/green_circle"/>
            <ImageView
                android:id="@+id/pYellow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/yellow_circle"/>
            <ImageView
                android:id="@+id/pRed"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/red_circle"/>

        </LinearLayout>
        <EditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:gravity="start"
            android:hint="@string/notes"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textColorHint="@color/white"
            android:background="@drawable/et_back_style"
            />
    </LinearLayout>
<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/saveNotesBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right"
    android:layout_margin="26dp"
    android:src="@drawable/ic_baseline_done_24"
    android:backgroundTint="@color/red_color"/>

</FrameLayout>